--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
    <!-- favicons
 	================================================== -->
 	<link rel="icon" type="image/png" href="favicon.png">
-<script src="//code.jivosite.com/widget/Y2fP3ILj37" async></script>
+
 </head>
 
 <body id="top">
@@ -51,6 +51,7 @@
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Principala</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">Informatie</a></li>
 						<li><a class="smoothscroll"  href="#achit" title="">Achitare</a></li>
+            <li><a class="smoothscroll"  href="#mesage" title="">Cantacteaza-ne</a></li>
 					</ul>
 				</nav>
    		</div> <!-- /top-bar -->
@@ -146,8 +147,26 @@
 
    </section> <!-- /process-->
 
-
-
+<div id="mesage" >
+   <form method=POST action="mailto:ustlabs@protonmail.com" enctype="text/plain">
+       <label for="name" id="cont" >Nume:</label>
+       <br>
+       <input type="text" name="Nume" id="name" value="Introduceti un nume">
+       <br>
+       <label for="email" id="cont">Email:</label>
+       <br>
+       <input type="email" name="Email" id="email" value="Introduceti Emailul dvs.">
+       <br>
+        <label for="body" id="cont" >Mesaj:</div>
+    <textarea name="Mesajul">Introduceti mesajul dvs.</textarea>
+    <br>
+    <div class="text-center">
+       <input type="submit"  name="Submit">
+     </div>
+     <p style="text-align:center">Revenim cu un email . Verificati casuta postala .</p>
+   </form>
+ </div>
+<hr>
 
    <!-- footer
    ================================================== -->
@@ -160,8 +179,9 @@
       	<div class="col-six tab-full">
 	      	<div class="copyright">
 		        	<span>© Copyright UST LABS 2021.</span>
-
+<span>Site-ul inca e in stadiu de reinoire.</span>
 		         </div>
+
 	      	</div>
 
 	      	<div id="go-top">
