--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <textarea name="Mesajul">Introduceti mesajul dvs.</textarea>
     <br>
     <div class="text-center">
-       <input type="submit"  name="Submit">
+       <input type="submit" value="Trimite" name="Submit">
      </div>
      <p style="text-align:center">Revenim cu un email . Verificati casuta postala .</p>
    </form>
