--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
    				</li>
    				<li>
    					<strong>Email:</strong>
-   					<span>ourlabs@protonmail.com</span>
+   					<span>ourlabs@pm.me</span>
    				</li>
 
    			</ul> <!-- /info-list -->
@@ -148,7 +148,7 @@
    </section> <!-- /process-->
 
 <div id="mesage" >
-   <form method=POST action="mailto:ourlabs@protonmail.com" enctype="text/plain">
+   <form method=POST action="mailto:ourlabs@pm.me" enctype="text/plain">
        <label for="name" id="cont" >Nume:</label>
        <br>
        <input type="text" name="Nume" id="name" value="Introduceti un nume">
