--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>OUR-LABS</title>
+	<title>Cunostinte.ml</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -20,7 +20,8 @@
    <link rel="stylesheet" href="css/base.css">
    <link rel="stylesheet" href="css/main.css">
    <link rel="stylesheet" href="css/vendor.css">
-
+   <link rel="stylesheet" href="css/pure.css">
+  <link rel="stylesheet" href="css/style.css">
    <!-- script
    ================================================== -->
 	<script src="js/modernizr.js"></script>
@@ -28,7 +29,7 @@
 
    <!-- favicons
 	================================================== -->
-	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="icon" type="image/png" href="faviconu.png">
 
 </head>
 
@@ -40,18 +41,18 @@
    	<div class="row">
 
    		<div class="top-bar">
-   			<a class="menu-toggle" href="#"><span>Menu</span></a>
+   			<a class="menu-toggle" href="#"><span>Meniu</span></a>
 
 	   		<div class="logo">
-		         <a href="index.html">OUR-LABS</a>
+		         <a href="index.html">Cunoștințe.ml</a>
 		      </div>
 
 		   	<nav id="main-nav-wrap">
 					<ul class="main-navigation">
-						<li class="current"><a class="smoothscroll"  href="#intro" title="">Principala</a></li>
-						<li><a class="smoothscroll"  href="#about" title="">Informatie</a></li>
+						<li class="current"><a class="smoothscroll"  href="#intro" title="">Principală</a></li>
+						<li><a class="smoothscroll"  href="#about" title="">Informație</a></li>
 						<li><a class="smoothscroll"  href="#achit" title="">Achitare</a></li>
-            <li><a class="smoothscroll"  href="#mesage" title="">Cantacteaza-ne</a></li>
+            <li><a class="smoothscroll"  href="#mesage" title="">Cantactează-ne</a></li>
 					</ul>
 				</nav>
    		</div> <!-- /top-bar -->
@@ -71,14 +72,14 @@
    			<div class="col-twelve">
 
 	   			<h5>Salut.</h5>
-	   			<h1>Venim cu o oferta oavantajoasa pentru tine.</h1>
+	   			<h1>Venim cu o ofertă oavantajoasă pentru tine.</h1>
 
 	   			<p class="intro-position">
 	   				<span>Laboratoare</span>
 	   				<span>HTML/JAVASCRIPT</span>
 	   			</p>
 
-	   			<a class="button stroke smoothscroll" href="#about" title="">Mai multa informatie</a>
+	   			<a class="button stroke smoothscroll" href="#about" title="">Mai multă informație</a>
 
 	   		</div>
 
@@ -94,17 +95,17 @@
    	<div class="row section-intro">
    		<div class="col-twelve">
 
-   			<h5>Putina informatie</h5>
-   			<h1>Noi rezolvam . Voi sunteti apreciati.</h1>
+        <h5>Puțină informație</h5>
+        <h1>Noi rezolvăm . Voi sunteți apreciați.</h1>
 
    			<div class="intro-info">
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Totul este simplu . Luati legatura cu un operator  .</p>
-          <p class="lead">Noi in primul rind cerem coditiile problemelor dvs. , aducem dovezi (screenshoturi/video) ca tot ce am rezolvat lucreaza si e corect.</p>
-          <p class="lead">Va intelegeti cu pretul (per Laborator) .</p>
-          <p class="lead">Dupa care asteptam TRANSFERUL , in urma caruia , va trimitem fisierele  (link/email).</p>
+          <p class="lead">Totul este simplu . Luați legătura cu un operator  .</p>
+          <p class="lead">Noi în primul rînd cerem codițiile problemelor dvs. , aducem dovezi (screenshoturi/video) că tot ce am rezolvat lucrează si e corect.</p>
+          <p class="lead">Vă ințelegeți cu prețul (per Laborator) .</p>
+          <p class="lead">După care așteptăm TRANSFERUL , în urma căruia , vă trimitem fișierele  (link/email).</p>
           <p class="lead">Totul este ANONIM .</p>
         </div>
 
@@ -114,9 +115,9 @@
 <section id="achit">
   <div class="row section-intro">
     <div class="col-twelve">
-<h5>Putina informatie :</h5>
-   			<h3>Date de care aveti nevoie !</h3>
-   			<p>Acestea sunt datele de care aveti nevoie pentru achitarea serviciilor oferite .</p>
+      <h5>Puțină informație :</h5>
+         			<h3>Date de care aveți nevoie !</h3>
+         			<p>Acestea sunt datele de care aveți nevoie pentru achitarea serviciilor oferite .</p>
 </div>
 </div>
         <div class="row about-content" style="text-align:center">
@@ -125,14 +126,14 @@
    			<ul class="info-list">
    				<li>
    					<strong>Nume beneficiar:</strong>
-   					<span>OUR LABS</span>
+   					<span>Cunoștințele Mele</span>
    				</li>
    				<li>
             <strong>Număr card:</strong>
    					<span>4890494739904621</span>
    				</li>
-   					<strong>Website:</strong>
-   					<span><a href="https://our-labs.github.io/">OUR LABS</a></span>
+   					<strong>Web Site:</strong>
+   					<span><a href="https://www.cunostinte.ml/">www.cunostinte.ml</a></span>
    				</li>
    				<li>
    					<strong>Email:</strong>
@@ -147,25 +148,43 @@
 
    </section> <!-- /process-->
 
-<div id="mesage" >
-   <form method=POST action="mailto:ourlabs@pm.me" enctype="text/plain">
-       <label for="name" id="cont" >Nume:</label>
+   <div id="mesage" >
+     <form class="gform pure-form pure-form-stacked" method="POST" data-email="ourlabs@pm.me"
+   action="https://script.google.com/macros/s/AKfycbzNAqb5lcAjM5loHKpnTPfx2zbqAOz6hBkwouhgjQ-u4u1YApMrbAGiZjSm2VAEMWrUfQ/exec">
+   <div class="form-elements">
+         <fieldset class="pure-group">
+           <label for="name" id="cont">Nume: </label>
+           <input type="text" id="name" name="name" placeholder="Nume" />
+        </fieldset>
+          <br>
+          <fieldset class="pure-group">
+           <label for="email" id="cont">Email-ul tău :</label>
+           <input id="email" name="email" type="email"
+           required placeholder="emailul.dvs@email.com"/>
+           <span class="email-invalid" style="display:none">
+           Trebuie sa fie un email real și valid</span>
+         </fieldset>
+         <br>
+         <fieldset class="pure-group">
+                 <label for="message" id="cont">Mesaj: </label>
+                 <textarea id="message" name="message" rows="10"
+                 placeholder="Introduceți mesajul dvs."></textarea>
+               </fieldset>
+
        <br>
-       <input type="text" name="Nume" id="name" value="Introduceti un nume">
-       <br>
-       <label for="email" id="cont">Email:</label>
-       <br>
-       <input type="email" name="Email" id="email" value="Introduceti Emailul dvs.">
-       <br>
-        <label for="body" id="cont" >Mesaj:</div>
-    <textarea name="Mesajul">Introduceti mesajul dvs.</textarea>
-    <br>
-    <div class="text-center">
-       <input type="submit" value="Trimite"  name="Submit">
-     </div>
-     <p style="text-align:center">Revenim cu un email . Verificati casuta postala .</p>
-   </form>
- </div>
+       <div class="text-center">
+         <input type="submit" value="Trimite"  name="Submit">
+        </div>
+        <p style="text-align:center" id="cont">Revenim cu un email . Verificați căsuța postală .</p>
+        <div class="thankyou_message" style="display:none;" id="cont">
+              <h2 id="cont">Mulțumim că ați ales serviciile noastre!</h2>
+            </div>
+      </form>
+      <!-- Submit the Form to Google Using "AJAX" -->
+   <script data-cfasync="false" type="text/javascript"
+   src="js/form-submission-handler.js"></script>
+   <!-- END -->
+    </div>
 <hr>
 
    <!-- footer
@@ -178,8 +197,8 @@
 
       	<div class="col-six tab-full">
 	      	<div class="copyright">
-		        	<span>© Copyright OUR LABS 2021.</span>
-<span>Site-ul inca e in stadiu de reinoire.</span>
+		        	<span>© Copyright <a href="https://www.cunostinte.ml/">www.cunostinte.ml</a> 2021.</span>
+<span>Site-ul încă e în stadiu de reînoire.</span>
 		         </div>
 
 	      	</div>
