--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Principală</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">Informație</a></li>
 						<li><a class="smoothscroll"  href="#achit" title="">Achitare</a></li>
-            <li><a class="smoothscroll"  href="generator/WinnerGenerator.html" title="">Winner Generator</a></li>
+            <li><a class="smoothscroll"  href="../generator/WinnerGenerator.html" title="">Winner Generator</a></li>
             <li><a class="smoothscroll"  href="#mesage" title="">Cantactează-ne</a></li>
 					</ul>
 				</nav>
@@ -73,7 +73,7 @@
    			<div class="col-twelve">
 
 	   			<h5>Salut.</h5>
-	   			<h1>Venim cu o ofertă oavantajoasă pentru tine.</h1>
+	   			<h1>Venim cu o ofertă avantajoasă pentru tine.</h1>
 
 	   			<p class="intro-position">
 	   				<span>Laboratoare</span>
