--- a/WinnerGenerator.html
+++ b/WinnerGenerator.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <script src="scripts.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="js.gen.js"></script>
+    <link rel="stylesheet" type="text/css" href="js/gen.css">
     <meta charset="utf-8">
     <title>WinnerGenerator</title>
   <link rel="stylesheet" href="css/base.css">
@@ -29,7 +29,7 @@
    <div class="row">
 
      <div class="top-bar">
-       <a class="menu-toggle" href="#"><span>Meniu</span></a>
+       <a class="menu-toggle" href="index.html"><span>Meniu</span></a>
 
        <div class="logo">
             <a href="index.html">Cunoștințe.ml</a>
@@ -37,11 +37,11 @@
 
        <nav id="main-nav-wrap">
          <ul class="main-navigation">
-           <li class="current"><a class="smoothscroll"  href="#intro" title="">Principală</a></li>
-           <li><a class="smoothscroll"  href="#about" title="">Informație</a></li>
-           <li><a class="smoothscroll"  href="#achit" title="">Achitare</a></li>
+           <li class="current"><a class="smoothscroll"  href="index.html#intro" title="">Principală</a></li>
+           <li><a class="smoothscroll"  href="index.html#about" title="">Informație</a></li>
+           <li><a class="smoothscroll"  href="index.html#achit" title="">Achitare</a></li>
            <li><a class="smoothscroll" href="WinnerGenerator.html" title="">Winner Generator</a></li>
-           <li><a class="smoothscroll"  href="#mesage" title="">Cantactează-ne</a></li>
+           <li><a class="smoothscroll"  href="index.html#mesage" title="">Cantactează-ne</a></li>
          </ul>
        </nav>
      </div> <!-- /top-bar -->
