--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Principală</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">Informație</a></li>
 						<li><a class="smoothscroll"  href="#achit" title="">Achitare</a></li>
-            <li><a class="smoothscroll" href="WinnerGenerator.html" title="">Winner Generator</a></li>
+            <li><a class="smoothscroll" href="generator.html" title="">Winner Generator</a></li>
             <li><a class="smoothscroll"  href="#mesage" title="">Cantactează-ne</a></li>
 					</ul>
 				</nav>
