--- a/generator/generator.html
+++ b/generator/generator.html
@@ -20,7 +20,7 @@
 
  <!-- header
   ================================================== -->
-<a id="back" href="index.html">&nbsp;Back&nbsp;</a>
+<div id="back"><a href="../index.html">&nbsp;<<<&nbsp;</a></div>
 
    </div> <!-- /row -->
   </header> <!-- /header -->
@@ -37,7 +37,7 @@
 <div class="cnt2" id = "cont">
  <p id="demo"></p>
 </div>
-<p class="pd">By Pavel Dordea</p>
+<p class="pd"><span>© Copyright <a href="https://www.cunostinte.ml/">www.cunostinte.ml</a> 2021.</span></p>
 
   </body>
 </html>
