--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    ================================================== -->
 	<script src="js/modernizr.js"></script>
 	<script src="js/pace.min.js"></script>
-
+<script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.js'></script>
    <!-- favicons
 	================================================== -->
 	<link rel="icon" type="image/png" href="faviconu.png">
@@ -52,7 +52,7 @@
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Principală</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">Informație</a></li>
 						<li><a class="smoothscroll"  href="#achit" title="">Achitare</a></li>
-            <li><a class="smoothscroll" href="generator.html" title="">Winner Generator</a></li>
+            <li><a  href="generator/generator.html" title="">Winner Generator</a></li>
             <li><a class="smoothscroll"  href="#mesage" title="">Cantactează-ne</a></li>
 					</ul>
 				</nav>
