--- a/generator/generator.html
+++ b/generator/generator.html
@@ -12,7 +12,7 @@
 
   <!-- favicons
  ================================================== -->
- <link rel="icon" type="image/png" href="faviconu.png">
+ <link rel="icon" type="image/png" href="../faviconu.png">
 
 </head>
 
