--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
    			<a class="menu-toggle" href="#"><span>Meniu</span></a>
 
 	   		<div class="logo">
-		         <a href="index.html">Cunoștințe.ml</a>
+		         <a href="index.html">Cuno&#351;tin&#355;e.ml</a>
 		      </div>
 
 		   	<nav id="main-nav-wrap">
 					<ul class="main-navigation">
-						<li class="current"><a class="smoothscroll"  href="#intro" title="">Principală</a></li>
-						<li><a class="smoothscroll"  href="#about" title="">Informație</a></li>
+						<li class="current"><a class="smoothscroll"  href="#intro" title="">Principal&#259;</a></li>
+						<li><a class="smoothscroll"  href="#about" title="">Informa&#355;ie</a></li>
 						<li><a class="smoothscroll"  href="#achit" title="">Achitare</a></li>
             <li><a  href="generator/generator.html" title="">Winner Generator</a></li>
-            <li><a class="smoothscroll"  href="#mesage" title="">Cantactează-ne</a></li>
+            <li><a class="smoothscroll"  href="#mesage" title="">Cantacteaz&#259;-ne</a></li>
 					</ul>
 				</nav>
    		</div> <!-- /top-bar -->
@@ -73,14 +73,14 @@
    			<div class="col-twelve">
 
 	   			<h5>Salut.</h5>
-	   			<h1>Venim cu o ofertă avantajoasă pentru tine.</h1>
+	   			<h1>Venim cu o ofert&#259; avantajoas&#259; pentru tine.</h1>
 
 	   			<p class="intro-position">
 	   				<span>Laboratoare</span>
 	   				<span>HTML/JAVASCRIPT</span>
 	   			</p>
 
-	   			<a class="button stroke smoothscroll" href="#about" title="">Mai multă informație</a>
+	   			<a class="button stroke smoothscroll" href="#about" title="">Mai mult&#259; informa&#355;ie</a>
 
 	   		</div>
 
@@ -96,17 +96,17 @@
    	<div class="row section-intro">
    		<div class="col-twelve">
 
-        <h5>Puțină informație</h5>
-        <h1>Noi rezolvăm . Voi sunteți apreciați.</h1>
+        <h5>Pu&#355;in&#259; informa&#355;ie</h5>
+        <h1>Noi rezolv&#259;m . Voi sunte&#355;i aprecia&#355;i.</h1>
 
    			<div class="intro-info">
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-          <p class="lead">Totul este simplu . Luați legătura cu un operator  .</p>
-          <p class="lead">Noi în primul rînd cerem codițiile problemelor dvs. , aducem dovezi (screenshoturi/video) că tot ce am rezolvat lucrează si e corect.</p>
-          <p class="lead">Vă ințelegeți cu prețul (per Laborator) .</p>
-          <p class="lead">După care așteptăm TRANSFERUL , în urma căruia , vă trimitem fișierele  (link/email).</p>
+          <p class="lead">Totul este simplu . Lua&#355;i leg&#259;tura cu un operator  .</p>
+          <p class="lead">Noi &#238;n primul r&#238;nd cerem codi&#355;iile problemelor dvs. , aducem dovezi (screenshoturi/video) c&#259; tot ce am rezolvat lucreaz&#259; si e corect.</p>
+          <p class="lead">V&#259; in&#355;elege&#355;i cu pre&#355;ul (per Laborator) .</p>
+          <p class="lead">Dup&#259; care a&#351;tept&#259;m TRANSFERUL , &#238;n urma c&#259;ruia , v&#259; trimitem fi&#351;ierele  (link/email).</p>
           <p class="lead">Totul este ANONIM .</p>
         </div>
 
@@ -116,9 +116,9 @@
 <section id="achit">
   <div class="row section-intro">
     <div class="col-twelve">
-      <h5>Puțină informație :</h5>
-         			<h3>Date de care aveți nevoie !</h3>
-         			<p>Acestea sunt datele de care aveți nevoie pentru achitarea serviciilor oferite .</p>
+      <h5>Pu&#355;in&#259; informa&#355;ie :</h5>
+         			<h3>Date de care ave&#355;i nevoie !</h3>
+         			<p>Acestea sunt datele de care ave&#355;i nevoie pentru achitarea serviciilor oferite .</p>
 </div>
 </div>
         <div class="row about-content" style="text-align:center">
@@ -127,10 +127,10 @@
    			<ul class="info-list">
    				<li>
    					<strong>Nume beneficiar:</strong>
-   					<span>Cunoștințele Mele</span>
+   					<span>Cuno&#351;tin&#355;ele Mele</span>
    				</li>
    				<li>
-            <strong>Număr card:</strong>
+            <strong>Num&#259;r card:</strong>
    					<span>4890494739904621</span>
    				</li>
    					<strong>Web Site:</strong>
@@ -159,26 +159,26 @@
         </fieldset>
           <br>
           <fieldset class="pure-group">
-           <label for="email" id="cont">Email-ul tău :</label>
+           <label for="email" id="cont">Email-ul t&#259;u :</label>
            <input id="email" name="email" type="email"
            required placeholder="emailul.dvs@email.com"/>
            <span class="email-invalid" style="display:none">
-           Trebuie sa fie un email real și valid</span>
+           Trebuie sa fie un email real &#351;i valid</span>
          </fieldset>
          <br>
          <fieldset class="pure-group">
                  <label for="message" id="cont">Mesaj: </label>
                  <textarea id="message" name="message" rows="10"
-                 placeholder="Introduceți mesajul dvs."></textarea>
+                 placeholder="Introduce&#355;i mesajul dvs."></textarea>
                </fieldset>
 
        <br>
        <div class="text-center">
          <input type="submit" value="Trimite"  name="Submit">
         </div>
-        <p style="text-align:center" id="cont">Revenim cu un email . Verificați căsuța postală .</p>
+        <p style="text-align:center" id="cont">Revenim cu un email . Verifica&#355;i c&#259;su&#355;a postal&#259; .</p>
         <div class="thankyou_message" style="display:none;" id="cont">
-              <h2 id="cont">Mulțumim că ați ales serviciile noastre!</h2>
+              <h2 id="cont">Mul&#355;umim c&#259; a&#355;i ales serviciile noastre!</h2>
             </div>
       </form>
       <!-- Submit the Form to Google Using "AJAX" -->
@@ -199,7 +199,7 @@
       	<div class="col-six tab-full">
 	      	<div class="copyright">
 		        	<span>© Copyright <a href="https://www.cunostinte.ml/">www.cunostinte.ml</a> 2021.</span>
-<span>Site-ul încă e în stadiu de reînoire.</span>
+<span>Site-ul &#238;nc&#259; e &#238;n stadiu de re&#238;noire.</span>
 		         </div>
 
 	      	</div>
