--- a/generator/generator.html
+++ b/generator/generator.html
@@ -28,11 +28,11 @@
 
 <div class="cnt1">
 
-    <label for="m">Da&#355;i num&#259;rul c&#238;&#351;tig&#259;torilor :<label>
+    <label for="m">Dati numarul castigatorilor :<label>
     <input type="textarea" id="m"><br><br><!--Cream o caseta pentru introducere -->
-	 <label for="y">Da&#355;i num&#259;rul participan&#355;ilor:<label>
+	 <label for="y">Dati numarul participantilor:<label>
     <input type="textarea" id="n"><br><br><!--Cream o caseta pentru introducere -->
-    <input type="button" value="Genereaz&#259;" onClick="generare()"><!--Chemam functia -->
+    <input type="button" value="Genereaza" onClick="generare()"><!--Chemam functia -->
  </div>  <br>
 <div class="cnt2" id = "cont">
  <p id="demo"></p>
